feat: fix endpoint delete route + docs api
